Made corrections Deacon wanted

--- a/art-program.html
+++ b/art-program.html
@@ -85,8 +85,9 @@
           </p>
           <img src="images/art-drawing-small.jpg" class="side-image" alt="Jesus washing the foot of a black man while the disciples look on." />
           <img class="side-image hidden-xs" src="images/top-hat.jpg" alt="Black man in a tuxedo and top-hat." />
-          <img class="side-image hidden-xs" src="images/jesus-flock.jpg" alt="Painting of Jesus in a pastoral setting holding a crook and guiding a flock of sheep." />
-          <img class="side-image hidden-xs" src="images/meeting-demand.jpg" alt="Digital art cover of a pamphlet created by the inmates to teach others how to maximize the efficiency of crops. Depicts two farmers with anime-spiked hair, both wearing blue overalls, one holding a shovel, the other a hoe. A dog and several ducks loiter in the foreground. Behind them, a big red barn and a phallic silver silo loom over the scene." />
+          <img class="side-image hidden-xs" src="images/frederick-douglass.jpg" alt="Inmate sketch of Frederick Douglas." />
+          <img class="side-image hidden-xs" src="images/asian-movie-sketch.png" alt="Inmate sketch of pretty asian woman." />
+          <img class="side-image hidden-xs" src="images/black-woman-sketch.png" alt="Inmate sketch of glamorous black woman." />     
         </aside>
       </div>
       <div class="col-xs-12 col-sm-8 col-md-9 main-text">
@@ -105,7 +106,9 @@
       <div class="col-xs-12 visible-xs text-center">
         <img class="side-image" src="images/top-hat.jpg" alt="Black man in a tuxedo and top-hat." /><br>
         <img class="side-image" src="images/jesus-flock.jpg" alt="Painting of Jesus in a pastoral setting holding a crook and guiding a flock of sheep." /><br>
-        <img class="side-image" src="images/meeting-demand.jpg" alt="Digital art cover of a pamphlet created by the inmates to teach others how to maximize the efficiency of crops. Depicts two farmers with anime-spiked hair, both wearing blue overalls, one holding a shovel, the other a hoe. A dog and several ducks loiter in the foreground. Behind them, a big red barn and a phallic silver silo loom over the scene." />
+        <img class="side-image" src="images/frederick-douglass.jpg" alt="Inmate sketch of Frederick Douglas." />
+        <img class="side-image" src="images/asian-movie-sketch.png" alt="Inmate sketch of pretty asian woman." />
+        <img class="side-image" src="images/black-woman-sketch.png" alt="Inmate sketch of glamorous black woman." />
       </div>
     </div>
   </div>
