--- a/board.html
+++ b/board.html
@@ -109,13 +109,10 @@
             REV. DEACON DONALD BATTISTON
           </p>
         </h4>
-        <p class="cursive">
-          And because we, the church, are now His representatives on earth, prison is where we should be as well — calling the sick to the healing touch of  Jesus the Savior.    Still recognizing in those inmates, the dignity of God’s creation, no matter how far they have fallen; trusting that no one — NO ONE —is beyond Christ’s power to love , forgive and redeem.
-        </p>
-        <p class="cursive small">
+        <p class="cursive small text-center">
           *NO DIRECTORS RECEIVE ANY FORM OF COMPENSATION
         </p>
-        <img src="images/farm2.JPG" class="main-column-img center-block responsive" alt="Group picture of inmates, Deacon, and other officials displaying the fruits of their labor.">
+        <img src="images/ministers.jpg" class="main-column-img center-block responsive" alt="Three Deacons posing for a picture in front of a cross inside a church.">
       </div>
     </div>
   </div>
