--- a/cvli-license.html
+++ b/cvli-license.html
@@ -93,6 +93,7 @@
         <p>
           Through an agreement with studios and producers, the CVLI Church Video License provides legal coverage for churches and for other ministry organizations to show motion pictures and other audiovisual programs intended for personal, private use only (“Videos”).
         </p>
+        <img src="images/prison.jpg" class="main-column-img center-block responsive" alt="Prisoner looking at a massive razor wire structure through cell bars.">
       </div>
     </div>
   </div>
