--- a/dismas.html
+++ b/dismas.html
@@ -77,11 +77,11 @@
       <div class="col-xs-12 col-sm-4 col-md-3">
         <aside class="text-center">
           <p>
-            “For God so loved the world,
-            <br>that he gave his only Son,
-            <br>that whoever believes in him
-            <br> should not perish but have eternal life.
-            <br>&mdash;John 3:16
+            ". . .then he said, Jesus remember me
+            <br>when you come into your kingdom,
+            <br>and Jesus said to him, 'Truly I say to you
+            <br>today you will be with me in paradise.'"
+            <br>&mdash;Luke 23: 42-43
           </p>
           <img src="images/dismas-side.jpg" alt="Artwork of Jesus on the cross, and Dismas next to him. Jesus has a spear in his side, and more spearheads threaten." />
         </aside>
@@ -92,7 +92,7 @@
           Luke’s gospel contains unique details of an event on Golgotha. Two unnamed persons are mentioned at the Crucifiction. The Gospel of Nichodemus later names them Dismas and Gestas.
         </p>
         <p class="cursive">
-          “Two others also, who were criminals, were led away to be put to death with [Jesus]. . . . One of the criminals who were hanged railed at him, saying, ‘Are you not the Christ? Save yourself and us!’ But the other rebuked him, saying, ‘Do you not fear God, since you are under the same sentence of condemnation? And we indeed justly; for we are receiving the due reward of our deeds; but this man has done nothing wrong.’ And he said, ‘Jesus, remember me when you come into your kingdom.’ And he said to him, ‘Truly, I say to you, today you will be with me in paradise’” (Luke 23:32-43).
+          “. . . Two others also, who were criminals, were led away to be put to death with [Jesus]. . . . One of the criminals who was hanged railed at him, saying, ‘Are you not the Christ? Save yourself and us!’ But the other rebuked him, saying, ‘Do you not fear God, since you are under the same sentence of condemnation? And we indeed justly; for we are receiving the due reward of our deeds; but this man has done nothing wrong.’ And he said, ‘Jesus, remember me when you come into your kingdom.’ And he said to him, ‘Truly, I say to you, today you will be with me in paradise’” (Luke 23:32-43).
         </p>
         <p>
           This is all the Bible tells us about the “penitent thief,” but several points are clear. First, he is a criminal whose crucifixion for his actions is just. Second, he is contrite. Third, he believes in Jesus. And finally, Jesus’ unlimited mercy is clearly shown as he affirms his salvation. There is no indication that this man was a Christian, yet Jesus assures him that he is saved and even promises (in most Bible translations) that he will go to heaven that very day.
