--- a/donations.html
+++ b/donations.html
@@ -92,7 +92,7 @@
           The only hope for an inmate to change his life is to "catch a glimpse" of the loving and forgiving Christ in those who minister to them. Your prayers and donations help us to do that better.
         </p>
         <p>
-          If you have questions or would like to assist us in this Corporal work of mercy, we invite you to contact us or contribute a <span class="cursive">tax deductible*</span> donation to:
+          If you have questions or would like to assist us in this Corporal work of mercy, we invite you to contact us or contribute by sending a <span class="cursive">tax deductible*</span> donation to:
           <div class="text-center ftg larger">
             Saint Dismas Prison Ministry Foundation<br>
             1701 Indian Creek Parkway<br>
@@ -100,7 +100,7 @@
             561-662-0832
           </div>
         </p>
-        <p class="cursive small">
+        <p class="cursive small text-center">
           *The Saint Dismas Prison Ministry Foundation is an IRS approved 501C(3) tax exempt charity.
         </p>
         <img src="images/three-crosses.jpg" class="main-column-img center-block responsive" alt="Image of one man helping another top a mountain.">
