--- a/gavel-club.html
+++ b/gavel-club.html
@@ -100,7 +100,10 @@
         <p class="cursive">
           But of course, the most important value of the program is the development of self confidence and a positive self image for the inmate.
         </p>
-        <img src="images/prison.jpg" class="main-column-img center-block responsive" alt="Prisoner looking at a massive razor wire structure through cell bars.">
+
+        <img src="images/toastmasters1.png" class="main-column-img center-block responsive" alt="Inmate delivering a speech, the Toastmasters logo in the background.">
+        <img src="images/toastmasters2.png" class="main-column-img center-block responsive" alt="Inmate standing behind a podium delivering a speech.">
+        <img src="images/toastmasters3.png" class="main-column-img center-block responsive" alt="Inmate delivering a presentation, a board with pictures set up beside him, and the Toastmasters logo behind him.">
       </div>
     </div>
   </div>
