--- a/inmate-aid.html
+++ b/inmate-aid.html
@@ -112,7 +112,7 @@
         <p>
           All are without cost to the inmate student. With the permission of prison officials, we routinely supply Bibles religious DVD's and other religious materials to inmates through the Chapel.
         </p>
-        <img src="images/confirmation.JPG" class="main-column-img center-block responsive" alt="Two champlains and two prisoners celebrating a confirmation.">
+        <img src="images/chapel-service3.jpg" class="main-column-img center-block responsive" alt="Chapel full of inmates attended a sermon.">
       </div>
     </div>
   </div>
