--- a/santa.html
+++ b/santa.html
@@ -100,9 +100,10 @@
         <p>
           On Christmas morning, when children come to the prison to visit their fathers, he or she receives a Christmas gift personally, from Saint Dismas Board members or the prison Chaplains. Since 2006, Board members Deacon Don Battiston, and Deacon George Kinard and their wives, have distributed the gifts.
         </p>
-        <img src="images/delivery.jpg" class="main-column-img center-block responsive" alt="Back of a van, doors flung open, and the inside is overflowing with presents. Two men stand on the side, smiling as they get ready to deliver presents to children.">
         <img src="images/toys.jpg" class="main-column-img center-block responsive" alt="Massive jumble of toys in all different types of containers and bags delivered to a needy home.">
-
+        <img src="images/toys2.jpg" class="main-column-img center-block responsive" alt="Bunch of toys filling up the back of a Uhaul van.">
+        <img src="images/toys3.jpg" class="main-column-img center-block responsive" alt="Bunch of toys in the hallway of a home.">
+        <img src="images/van.jpg" class="main-column-img center-block responsive" alt="Uhaul van filled with toys ready to make deliveries.">    
       </div>
     </div>
   </div>
