Some final fixes.

--- a/greeting-cards.html
+++ b/greeting-cards.html
@@ -82,7 +82,7 @@
             <br>&mdash;Hebrews 13:3
             <br>
           </p>
-          <img src="images/jesus-painting.jpg" class="side-image" alt="Painting of Jesus with thorns on head and blood dribbling down his cheek." />
+          <img src="images/prison-greeting-cards-.jpg" class="side-image" alt="Collection of greeting cards for prisoners." />
         </aside>
       </div>
       <div class="col-xs-12 col-sm-8 col-md-9 main-text">
@@ -93,7 +93,8 @@
         <p>
           Recognizing the need to encourage communication and to help make it possible, the Saint Dismas Foundation was instrumental in starting a free greeting card program many years ago. Since it's inception well over 100,000 cards have been provided free to any inmate that requests them from the Chaplain.
         </p>
-        <img src="images/prison-block.jpg" class="main-column-img center-block responsive" alt="Black and white image of long prison block, empty cells all along the sides.">
+        <img src="images/prison-block.jpg" class="main-column-img center-block img-responsive" alt="Black and white image of long prison block, empty cells all along the sides.">
+        <img src="images/greeting-cards.jpg" class="main-column-img center-block img-responsive" alt="Collection of greeting cards." />
       </div>
     </div>
   </div>
