--- a/inmate-aid.html
+++ b/inmate-aid.html
@@ -89,7 +89,7 @@
       </div>
       <div class="col-xs-12 col-sm-8 col-md-9 main-text">
         <h1 class="text-center ftg">Inmate Aid</h1>
-        <h3 class="ftg">Ingident Funds</h2>
+        <h3 class="ftg">Indigent Funds</h2>
         <p>
           The Foundation makes direct deposits to the Inmate Trust Fund in the name of qualified indigent inmates (usually $10) to enable them to purchase personal hygiene supplies (deodorant, toothpaste, shampoo etc.) which are not supplied by the prison.
         </p>
