--- a/veteran-posts.html
+++ b/veteran-posts.html
@@ -84,7 +84,7 @@
             <br>but sinners."&mdash;Mark 2:17
             <br>
           </p>
-          <img src="images/jesus_sketch.gif" alt="Image of an old, worn chalice, in the style of the holy grail." />
+          <img src="images/jesus_sketch.gif" class="side-image" alt="Image of an old, worn chalice, in the style of the holy grail." />
         </aside>
       </div>
       <div class="col-xs-12 col-sm-8 col-md-9 main-text">
@@ -95,6 +95,8 @@
         <p>
           We also pay the membership fees for indigent inmates who qualify to join the American Legion Post but can't afford to.
         </p>
+        <img src="images/veterans1.png" class="img-responsive center-block main-column-img" alt="Several veterans dressed in blue and white, black berrets on their heads, and performing a ceremony.">
+        <img src="images/veterans2.png" class="img-responsive center-block main-column-img" alt="Several veterans dressed in blue and white saluting.">
       </div>
     </div>
   </div>
