Added Photos page.

--- a/apiary.html
+++ b/apiary.html
@@ -48,6 +48,8 @@
                 <li><a href="gavel-club.html">Gavel Club (Toastmasters)</a></li>
                 <li><a href="veteran-posts.html">Veteran Posts</a></li>
                 <li><a href="merit-dorm.html">MERIT Dorm</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="photos.html">Photos</a></li>
               </ul>
             </li>
             <li class="dropdown">
