--- a/art-program.html
+++ b/art-program.html
@@ -48,6 +48,8 @@
                 <li><a href="gavel-club.html">Gavel Club (Toastmasters)</a></li>
                 <li><a href="veteran-posts.html">Veteran Posts</a></li>
                 <li><a href="merit-dorm.html">MERIT Dorm</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="photos.html">Photos</a></li>
               </ul>
             </li>
             <li class="dropdown">
@@ -87,7 +89,7 @@
           <img class="side-image hidden-xs" src="images/top-hat.jpg" alt="Black man in a tuxedo and top-hat." />
           <img class="side-image hidden-xs" src="images/frederick-douglass.jpg" alt="Inmate sketch of Frederick Douglas." />
           <img class="side-image hidden-xs" src="images/asian-movie-sketch.png" alt="Inmate sketch of pretty asian woman." />
-          <img class="side-image hidden-xs" src="images/black-woman-sketch.png" alt="Inmate sketch of glamorous black woman." />     
+          <img class="side-image hidden-xs" src="images/black-woman-sketch.png" alt="Inmate sketch of glamorous black woman." />
         </aside>
       </div>
       <div class="col-xs-12 col-sm-8 col-md-9 main-text">
