--- a/mandate.html
+++ b/mandate.html
@@ -49,6 +49,8 @@
                 <li><a href="gavel-club.html">Gavel Club (Toastmasters)</a></li>
                 <li><a href="veteran-posts.html">Veteran Posts</a></li>
                 <li><a href="merit-dorm.html">MERIT Dorm</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="photos.html">Photos</a></li>
               </ul>
             </li>
             <li class="dropdown">
@@ -88,7 +90,7 @@
       </div>
       <div class="col-xs-12 col-sm-8 col-md-9 main-text">
         <h1 class="text-center ftg">Our Mandate</h1>
-        <p class="bring-down">
+        <p>
           Based on the scriptures, one can clearly infer that if Jesus were on earth today, we would find Him in the prisons, talking and eating with the most loathed criminals and outcasts. He would be there <span class="cursive larger">“to seek and to save the lost”</span> and to restore them to sonship, just as He did with Zacchaeus and so many others.
         </p>
         <p>
