--- a/santa.html
+++ b/santa.html
@@ -49,6 +49,8 @@
                 <li><a href="gavel-club.html">Gavel Club (Toastmasters)</a></li>
                 <li><a href="veteran-posts.html">Veteran Posts</a></li>
                 <li><a href="merit-dorm.html">MERIT Dorm</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="photos.html">Photos</a></li>
               </ul>
             </li>
             <li class="dropdown">
@@ -103,7 +105,7 @@
         <img src="images/toys.jpg" class="main-column-img center-block responsive" alt="Massive jumble of toys in all different types of containers and bags delivered to a needy home.">
         <img src="images/toys2.jpg" class="main-column-img center-block responsive" alt="Bunch of toys filling up the back of a Uhaul van.">
         <img src="images/toys3.jpg" class="main-column-img center-block responsive" alt="Bunch of toys in the hallway of a home.">
-        <img src="images/van.jpg" class="main-column-img center-block responsive" alt="Uhaul van filled with toys ready to make deliveries.">    
+        <img src="images/van.jpg" class="main-column-img center-block responsive" alt="Uhaul van filled with toys ready to make deliveries.">
       </div>
     </div>
   </div>
