--- a/photos.html
+++ b/photos.html
@@ -6,10 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
   <link rel="stylesheet" type="text/css" href="stylesheets/dismas.css">
   <link href='https://fonts.googleapis.com/css?family=Fredericka+the+Great' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Lato:400,400italic' rel='stylesheet' type='text/css'>
-  <title>Saint Dismas - Board of Directors</title>
+  <title>Saint Dismas - Photos</title>
 </head>
 
 <body>
@@ -77,44 +78,28 @@
       <div class="col-xs-12 col-sm-4 col-md-3">
         <aside class="text-center">
           <p>
-            “For God so loved the world,
-            <br>that he gave his only Son,
-            <br>that whoever believes in him
-            <br> should not perish but have eternal life.
-            <br>&mdash;John 3:16
+            "Remember those in prison,
+            <br>as if you were in prison with them,
+            <br>and those who are mistreated as if
+            <br>you yourselves were suffering.”
+            <br>&mdash;Hebrews 13:3
+            <br>
           </p>
-          <img src="images/jesus_bars_art_small.jpg" alt="Artist rendering of Jesus in Prison, and the cell being locked." />
+          <img src="images/jesus_bars_art_small.jpg" class="img-responsive side-image" alt="Artist rendering of Jesus in Prison, and the cell being locked." />
         </aside>
       </div>
       <div class="col-xs-12 col-sm-8 col-md-9 main-text">
-        <h1 class="text-center ftg">SAINT DISMAS PRISON MINISTRY FOUNDATION</h1>
-        <h2 class="text-center ftg">
-          Board of Directors
-        </h2><br>
-        <h4 class="text-center ftg">
-          <p>
-            MARY E. LUPO
-          </p>
-          <p>
-            WILLIAM CONNELL
-          </p>
-          <p>
-            PHILIP JEKANOWSKI
-          </p>
-          <p>
-            WILLIAM C. MATTISON
-          </p>
-          <p>
-            REV. DEACON GEORGE KINARD
-          </p>
-          <p>
-            REV. DEACON DONALD BATTISTON
-          </p>
-        </h4>
-        <p class="cursive small text-center">
-          *NO DIRECTORS RECEIVE ANY FORM OF COMPENSATION
+        <h1 class="text-center ftg">Photos</h1>
+        <p>
+          Here are some photos of the people and events associated with our ministry.
         </p>
-        <img src="images/ministers.jpg" class="main-column-img center-block responsive" alt="Three Deacons posing for a picture in front of a cross inside a church.">
+          <img src="images/baptism.JPG" class="main-column-img center-block responsive" alt="Inmate being baptized by two ministers.">
+          <img src="images/chapel-service.jpg" class="main-column-img center-block responsive" alt="Inmates praying during a chapel service as a minister walks amongst them handing out the eucharist.">
+          <img src="images/chapel-service2.jpg" class="main-column-img center-block responsive" alt="Inmates attending a chapel service.">
+          <img src="images/confirmation.JPG" class="main-column-img center-block responsive" alt="Two inmates posing with two ministers after a confirmation. One inmate holds a piece of art.">
+          <img src="images/farm1.JPG" class="main-column-img center-block responsive" alt="Prison official, inmate, and minister posing amidst crops that have been planted as part of the ministry farm program.">
+          <img src="images/forearm-tattoo.jpg" class="main-column-img center-block responsive" alt="Inmate's forearm tattoo of Jesus on the cross.">
+          <img src="images/group-pic.jpg" class="main-column-img center-block responsive" alt="Group picture of inmates and prison staff.">
       </div>
     </div>
   </div>
