--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container-fluid">
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header text-center">
-            <a class="navbar-brand" href="home.html#"><img src="images/logo_small.png" class="img-responsive" alt="Saint Dismas Prison Ministry Logo"></a>
+            <a class="navbar-brand" href="index.html#"><img src="images/logo_small.png" class="img-responsive" alt="Saint Dismas Prison Ministry Logo"></a>
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
@@ -181,7 +181,7 @@
             </p>
           </div>
           <div class="col-xs-12 col-sm-4 col-md-4 text-center">
-            <a href="home.html"><img src="images/logo_small.png" class="logo img-responsive" alt="Saint Dismas Prison Ministry Logo" /></a>
+            <a href="index.html"><img src="images/logo_small.png" class="logo img-responsive" alt="Saint Dismas Prison Ministry Logo" /></a>
           </div>
           <div class="col-xs-12 col-sm-4 col-md-4 text-center">
             <p>
