--- a/dismas.html
+++ b/dismas.html
@@ -20,7 +20,7 @@
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header text-center">
-          <a class="navbar-brand" href="#"><img src="images/logo_small.png" class="img-responsive" alt="Saint Dismas Prison Ministry Logo"></a>
+          <a class="navbar-brand" href="index.php"><img src="images/logo_small.png" class="img-responsive" alt="Saint Dismas Prison Ministry Logo"></a>
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
@@ -130,7 +130,7 @@
           </p>
         </div>
         <div class="col-xs-12 col-sm-4 col-md-4 text-center">
-          <a href=""><img src="images/logo_small.png" class="logo img-responsive" alt="Saint Dismas Prison Ministry Logo" /></a>
+          <a href="index.php"><img src="images/logo_small.png" class="logo img-responsive" alt="Saint Dismas Prison Ministry Logo" /></a>
         </div>
         <div class="col-xs-12 col-sm-4 col-md-4 text-center">
           <p>
