Finalizing Stripe setup for Deacon.

--- a/thank-you.html
+++ b/thank-you.html
@@ -92,7 +92,7 @@
       <div class="col-xs-12 col-sm-8 col-md-9 main-text">
         <h1 class="text-center ftg">Thank you!</h1>
         <p class="bring-down">
-          Please accept our sincerest gratitude for your thoughtful donation, and for helping us continue this important work that we do.
+          Please accept our sincerest gratitude for your thoughtful donation and for helping us continue this important ministry.
         </p>
         <img src="images/dismas-cross.jpg" class="img-responsive center-block main-column-img" alt="Image of Jesus touching Saint Dismas's hand.">
       </div>
